# pylogic

./: LICENSE  README.rst  setup.cfg  setup.py
pylogic/: syntax.py
pylogic/kb/: inference.py  kb.py
tests/: test_syntax.py
