[metadata]
name = pylogic
version = attr: pylogic.__version__
url = https://github.com/lamcw/pylogic
author = Thomas Lam
author_email = thomas@lamcw.com
license = MIT
description = Logic programming for Python
long_description = file: README.rst, LICENSE
keywords = propositional logic kb inference knowledge
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
zip_safe = False
packages = find:

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
